# BubbleChatServer

./: .travis.yml  CMakeLists.txt  Dockerfile  README.md  codecov.yml
bubblechat/: bubblechatapplication.cpp  bubblechatapplication.hpp  bubbledefininations.hpp  business.cpp  business.hpp  chatapplication.cpp  chatapplication.hpp  chatsession.cpp  chatsession.hpp  common.hpp  database.cpp  database.hpp  main.cpp
bubblechat/model/: user.hpp
test/: model_user_test.cpp  test.py
